<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".LoginActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/sky"
            android:adjustViewBounds="true"
            android:contentDescription="@string/sky" />
        <ImageView
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo" />
    </FrameLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@drawable/edit_underline_selector"
        android:textCursorDrawable="@null"
        android:hint="@string/username"
        android:inputType="text" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@drawable/edit_underline_selector"
        android:textCursorDrawable="@null"
        android:hint="@string/password"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="33dp"
        android:text="@string/sign_in"
        android:textColor="@android:color/black"
        android:background="@color/colorButtonBlue"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/login_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sign_up"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/colorUnderlineBlue"
            android:background="@android:color/transparent"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/forget"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/colorUnderlineBlue"
            android:background="@android:color/transparent"/>

    </LinearLayout>
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@android:color/black"
        />
    <Button
        android:layout_marginTop="15dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@color/colorGreen"
        android:text="@string/sign_in_with_wechat"
        android:textColor="@android:color/white"
        />

</LinearLayout>