<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/sign_up_back"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto"
            android:gravity="left|center"
            android:text="@string/sign_up"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/sign_up_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/edit_underline_selector"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/sign_up_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/edit_underline_selector"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textCursorDrawable="@null" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="33dp"
        android:background="@color/colorButtonBlue"
        android:text="@string/sign_up"
        android:textColor="@android:color/black" />

</LinearLayout>